[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
description = "A minimal static site generator for clean, typography-focused websites"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
markdown = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
walkdir = "2.3"
regex = "1.8"
base64 = "0.21"
serde_yaml = "0.9"
warp = "0.3"
futures = "0.3"
ipfs-api-backend-hyper = "0.6"
hyper = "0.14" 